Package_Tools/include-C/llvm-c-20/llvm-c/in_arbeit/pas/Core.pas


function LLVMFunctionType(ReturnType:TLLVMTypeRef; ParamTypes:PLLVMTypeRef; ParamCount:dword; IsVarArg:TLLVMBool):TLLVMTypeRef;cdecl;external libllvm;
function LLVMIsFunctionVarArg(FunctionTy:TLLVMTypeRef):TLLVMBool;cdecl;external libllvm;
function LLVMGetReturnType(FunctionTy:TLLVMTypeRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMCountParamTypes(FunctionTy:TLLVMTypeRef):dword;cdecl;external libllvm;
procedure LLVMGetParamTypes(FunctionTy:TLLVMTypeRef; Dest:PLLVMTypeRef);cdecl;external libllvm;
function LLVMStructTypeInContext(C:TLLVMContextRef; ElementTypes:PLLVMTypeRef; ElementCount:dword; Pack:TLLVMBool):TLLVMTypeRef;cdecl;external libllvm;
function LLVMStructType(ElementTypes:PLLVMTypeRef; ElementCount:dword; Pack:TLLVMBool):TLLVMTypeRef;cdecl;external libllvm;
function LLVMStructCreateNamed(C:TLLVMContextRef; Name:Pchar):TLLVMTypeRef;cdecl;external libllvm;
function LLVMGetStructName(Ty:TLLVMTypeRef):Pchar;cdecl;external libllvm;
procedure LLVMStructSetBody(StructTy:TLLVMTypeRef; ElementTypes:PLLVMTypeRef; ElementCount:dword; Pack:TLLVMBool);cdecl;external libllvm;
function LLVMCountStructElementTypes(StructTy:TLLVMTypeRef):dword;cdecl;external libllvm;
procedure LLVMGetStructElementTypes(StructTy:TLLVMTypeRef; Dest:PLLVMTypeRef);cdecl;external libllvm;
function LLVMStructGetTypeAtIndex(StructTy:TLLVMTypeRef; i:dword):TLLVMTypeRef;cdecl;external libllvm;
function LLVMIsPackedStruct(StructTy:TLLVMTypeRef):TLLVMBool;cdecl;external libllvm;
function LLVMIsOpaqueStruct(StructTy:TLLVMTypeRef):TLLVMBool;cdecl;external libllvm;
function LLVMIsLiteralStruct(StructTy:TLLVMTypeRef):TLLVMBool;cdecl;external libllvm;
function LLVMGetElementType(Ty:TLLVMTypeRef):TLLVMTypeRef;cdecl;external libllvm;
procedure LLVMGetSubtypes(Tp:TLLVMTypeRef; Arr:PLLVMTypeRef);cdecl;external libllvm;
function LLVMGetNumContainedTypes(Tp:TLLVMTypeRef):dword;cdecl;external libllvm;
function LLVMArrayType(ElementType:TLLVMTypeRef; ElementCount:dword):TLLVMTypeRef;cdecl;external libllvm;
function LLVMArrayType2(ElementType:TLLVMTypeRef; ElementCount:Tuint64_t):TLLVMTypeRef;cdecl;external libllvm;
function LLVMGetArrayLength(ArrayTy:TLLVMTypeRef):dword;cdecl;external libllvm;
function LLVMGetArrayLength2(ArrayTy:TLLVMTypeRef):Tuint64_t;cdecl;external libllvm;
function LLVMPointerType(ElementType:TLLVMTypeRef; AddressSpace:dword):TLLVMTypeRef;cdecl;external libllvm;
function LLVMPointerTypeIsOpaque(Ty:TLLVMTypeRef):TLLVMBool;cdecl;external libllvm;
function LLVMPointerTypeInContext(C:TLLVMContextRef; AddressSpace:dword):TLLVMTypeRef;cdecl;external libllvm;
function LLVMGetPointerAddressSpace(PointerTy:TLLVMTypeRef):dword;cdecl;external libllvm;
function LLVMVectorType(ElementType:TLLVMTypeRef; ElementCount:dword):TLLVMTypeRef;cdecl;external libllvm;
function LLVMScalableVectorType(ElementType:TLLVMTypeRef; ElementCount:dword):TLLVMTypeRef;cdecl;external libllvm;
function LLVMGetVectorSize(VectorTy:TLLVMTypeRef):dword;cdecl;external libllvm;
function LLVMGetConstantPtrAuthPointer(PtrAuth:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
function LLVMGetConstantPtrAuthKey(PtrAuth:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
function LLVMGetConstantPtrAuthDiscriminator(PtrAuth:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
function LLVMGetConstantPtrAuthAddrDiscriminator(PtrAuth:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;

function LLVMVoidTypeInContext(C:TLLVMContextRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMLabelTypeInContext(C:TLLVMContextRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMX86AMXTypeInContext(C:TLLVMContextRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMTokenTypeInContext(C:TLLVMContextRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMMetadataTypeInContext(C:TLLVMContextRef):TLLVMTypeRef;cdecl;external libllvm;

function LLVMVoidType:TLLVMTypeRef;cdecl;external libllvm;
function LLVMLabelType:TLLVMTypeRef;cdecl;external libllvm;
function LLVMX86AMXType:TLLVMTypeRef;cdecl;external libllvm;

function LLVMTargetExtTypeInContext(C:TLLVMContextRef; Name:Pchar; TypeParams:PLLVMTypeRef; TypeParamCount:dword; IntParams:Pdword;
           IntParamCount:dword):TLLVMTypeRef;cdecl;external libllvm;
function LLVMGetTargetExtTypeName(TargetExtTy:TLLVMTypeRef):Pchar;cdecl;external libllvm;
function LLVMGetTargetExtTypeNumTypeParams(TargetExtTy:TLLVMTypeRef):dword;cdecl;external libllvm;
s{*
 * Get the type parameter at the given index for the target extension type.
 *
 * @see llvm::TargetExtType::getTypeParameter()
  }
function LLVMGetTargetExtTypeTypeParam(TargetExtTy:TLLVMTypeRef; Idx:dword):TLLVMTypeRef;cdecl;external libllvm;
{*
 * Obtain the number of int parameters for this target extension type.
 *
 * @see llvm::TargetExtType::getNumIntParameters()
  }
function LLVMGetTargetExtTypeNumIntParams(TargetExtTy:TLLVMTypeRef):dword;cdecl;external libllvm;
{*
 * Get the int parameter at the given index for the target extension type.
 *
 * @see llvm::TargetExtType::getIntParameter()
  }
function LLVMGetTargetExtTypeIntParam(TargetExtTy:TLLVMTypeRef; Idx:dword):dword;cdecl;external libllvm;
{*
 * @
  }
{*
 * @
  }
{*
 * @defgroup LLVMCCoreValues Values
 *
 * The bulk of LLVM's object model consists of values, which comprise a very
 * rich type hierarchy.
 *
 * LLVMValueRef essentially represents llvm::Value. There is a rich
 * hierarchy of classes within this type. Depending on the instance
 * obtained, not all APIs are available.
 *
 * Callers can determine the type of an LLVMValueRef by calling the
 * LLVMIsA* family of functions (e.g. LLVMIsAArgument()). These
 * functions are defined by a macro, so it isn't obvious which are
 * available by looking at the Doxygen source code. Instead, look at the
 * source definition of LLVM_FOR_EACH_VALUE_SUBCLASS and note the list
 * of value names given. These value names also correspond to classes in
 * the llvm::Value hierarchy.
 *
 * @
  }
{ Currently, clang-format tries to format the LLVM_FOR_EACH_VALUE_SUBCLASS }
{ macro in a progressively-indented fashion, which is not desired }
{ clang-format off }
{xxxxxxxxxxxxxxxxx
 nm -D /usr/lib/x86_64-linux-gnu/libLLVM-20.so | grep LLVMIsAArgument
00000000010c98b0 T LLVMIsAArgument@@LLVM_20.1
tux@tux-B660M-DS3H-DDR4:/n4800/DATEN/Programmierung/mit_GIT/Lazarus/Tutorial/GNOME/Package_Tools/include-C/llvm-c-20/llvm-c/in_arbeit$ nm -D /usr/lib/x86_64-linux-gnu/libLLVM-20.so | grep LLVMIsABasicBlock
00000000010c98d0 T LLVMIsABasicBlock@@LLVM_20.1

function LLVMIsAArgument(Val: LLVMValueRef): LLVMValueRef; cdecl; external 'LLVM';
function LLVMIsABasicBlock(Val: LLVMValueRef): LLVMValueRef; cdecl; external 'LLVM';



#define LLVM_FOR_EACH_VALUE_SUBCLASS(macro) \
  macro(Argument)                           \
  macro(BasicBlock)                         \
  macro(InlineAsm)                          \
  macro(User)                               \
    macro(Constant)                         \
      macro(BlockAddress)                   \
      macro(ConstantAggregateZero)          \
      macro(ConstantArray)                  \
      macro(ConstantDataSequential)         \
        macro(ConstantDataArray)            \
        macro(ConstantDataVector)           \
      macro(ConstantExpr)                   \
      macro(ConstantFP)                     \
      macro(ConstantInt)                    \
      macro(ConstantPointerNull)            \
      macro(ConstantStruct)                 \
      macro(ConstantTokenNone)              \
      macro(ConstantVector)                 \
      macro(ConstantPtrAuth)                \
      macro(GlobalValue)                    \
        macro(GlobalAlias)                  \
        macro(GlobalObject)                 \
          macro(Function)                   \
          macro(GlobalVariable)             \
          macro(GlobalIFunc)                \
      macro(UndefValue)                     \
      macro(PoisonValue)                    \
    macro(Instruction)                      \
      macro(UnaryOperator)                  \
      macro(BinaryOperator)                 \
      macro(CallInst)                       \
        macro(IntrinsicInst)                \
          macro(DbgInfoIntrinsic)           \
            macro(DbgVariableIntrinsic)     \
              macro(DbgDeclareInst)         \
            macro(DbgLabelInst)             \
          macro(MemIntrinsic)               \
            macro(MemCpyInst)               \
            macro(MemMoveInst)              \
            macro(MemSetInst)               \
      macro(CmpInst)                        \
        macro(FCmpInst)                     \
        macro(ICmpInst)                     \
      macro(ExtractElementInst)             \
      macro(GetElementPtrInst)              \
      macro(InsertElementInst)              \
      macro(InsertValueInst)                \
      macro(LandingPadInst)                 \
      macro(PHINode)                        \
      macro(SelectInst)                     \
      macro(ShuffleVectorInst)              \
      macro(StoreInst)                      \
      macro(BranchInst)                     \
      macro(IndirectBrInst)                 \
      macro(InvokeInst)                     \
      macro(ReturnInst)                     \
      macro(SwitchInst)                     \
      macro(UnreachableInst)                \
      macro(ResumeInst)                     \
      macro(CleanupReturnInst)              \
      macro(CatchReturnInst)                \
      macro(CatchSwitchInst)                \
      macro(CallBrInst)                     \
      macro(FuncletPadInst)                 \
        macro(CatchPadInst)                 \
        macro(CleanupPadInst)               \
      macro(UnaryInstruction)               \
        macro(AllocaInst)                   \
        macro(CastInst)                     \
          macro(AddrSpaceCastInst)          \
          macro(BitCastInst)                \
          macro(FPExtInst)                  \
          macro(FPToSIInst)                 \
          macro(FPToUIInst)                 \
          macro(FPTruncInst)                \
          macro(IntToPtrInst)               \
          macro(PtrToIntInst)               \
          macro(SExtInst)                   \
          macro(SIToFPInst)                 \
          macro(TruncInst)                  \
          macro(UIToFPInst)                 \
          macro(ZExtInst)                   \
        macro(ExtractValueInst)             \
        macro(LoadInst)                     \
        macro(VAArgInst)                    \
        macro(FreezeInst)                   \
      macro(AtomicCmpXchgInst)              \
      macro(AtomicRMWInst)                  \
      macro(FenceInst)
